--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Cannatella lab
 description: Cannatella Lab
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-slate
+theme: jekyll-theme-modernist
 
 gems:
   - jekyll-mentions
